--- a/lesson3/style.css
+++ b/lesson3/style.css
@@ -14,11 +14,11 @@ body{
   font-size: 10pt;
 }
 
-  /*HEADER*/
+ /*HEADER*/
 
 .header ul{
   background-image: url(img/menu_top.jpg);
-  margin: 40px 0px;
+  margin: 40px 0;
   }
 .header li{
   display: inline-block;
@@ -34,9 +34,12 @@ body{
   line-height: 40px;
   display: inline-block;
   font-size: 11pt;
-  padding: 0px 25px;
+  padding: 0 25px;
   margin-right: 42px;
-}
+  border-left: 1px solid;
+  border-right: 1px solid;
+  border-color: transparent;
+  }
 
 /*SIDEBAR*/
 
@@ -68,23 +71,28 @@ body{
 
 /*CONTENT*/
 
+.content{
+  float: right;
+  width: 672px;
+  padding-bottom: 60px;
+}
 .bike{
   border: 1px solid #c8c8c8;
   width: 672px;
-  margin-bottom: 40px;
 }
 .text{
-  margin-left: 315px;
+  padding-top: 40px;
+  padding-left: 22px;
   line-height: 20px;
 }
 
 /*FOOTER*/
 
 .footer{
-  margin-top: 60px;
   background-image: url(img/menu_footer.jpg);
   line-height: 40px;
-  padding: 0px 25px;
+  padding: 0 25px;
+  clear: both;
 }
 .footer_menu a{
   color: black;
@@ -95,8 +103,8 @@ body{
   display: inline-block;
 }
 .footer_menu li:nth-child(5){
-  margin-left: 193px;
-  margin-right: 0px;
+  margin-left: 180px;
+  margin-right: 0;
 }
 li a:hover{
   text-decoration: underline;
