--- a/lesson3bonus/css/style.css
+++ b/lesson3bonus/css/style.css
@@ -1,6 +1,86 @@
 body{
  background-image: url(../img/background.jpg);
  background-repeat:no-repeat;
- padding: 50px 70px 30px 70px;
- margin: 100;
+ font-family: Tahoma, sans-serif;
+ color: white;
+ width: 960px;
+ height: 883px;
+}
+
+/*HEADER*/
+
+.header{
+ background-image: url(../img/logo.png);
+ background-repeat:no-repeat;
+ margin-top: 50px;
+ margin-left: 70px;
+ margin-right: 70px;
+ height: 147px;
+}
+.logo{
+ float: left;
+}
+.slogan{
+ font-size: 8pt;
+ margin-left: 84px;
+ padding-top: 121px;
+ float: left;
+}
+.contacts_all{
+ float: right;
+ padding-top: 92px;
+ margin-right: 24px;
+}
+.contacts{
+ font-size: 8pt;
+ line-height: 12pt;
+}
+.phone{
+ font-size: 6pt;
+ line-height: 8pt;
+}
+.mail{
+ font-size: 8pt;
+ line-height: 11pt;
+}
+
+/*CONTENT*/
+
+.content{
+ font-size: 14px;
+ clear: both;
+ color: #e6e6e6;
+ margin-left: 70px;
+ margin-right: 70px;
+ text-align: center;
+ }
+.india{
+ float: left;
+}
+.nepal{
+ margin-left: 3px;
+ float: left;
+}
+.bhutan{
+ margin-top: 70px;
+ float: left;
+}
+.sri_lanka{
+ float: left;
+ margin-left: 3px;
+ margin-top: 70px;
+}
+.maldives{
+ margin-top: 70px;
+}
+.india{
+ float: left;
+}
+
+/*FOOTER*/
+
+.footer{
+ margin-top: 165px;
+ text-align: center;
+ font-size: 8pt;
 }
