fix_lesson3_bonus

--- a/lesson3bonus/css/style.css
+++ b/lesson3bonus/css/style.css
@@ -1,10 +1,11 @@
-body{
- background-image: url(../img/background.jpg);
- background-repeat:no-repeat;
+.content{
+ width: 960px;
+ overflow: hidden;
  font-family: Tahoma, sans-serif;
  color: white;
- width: 960px;
- height: 883px;
+ background-color: black;
+ background-image: url(../img/background.jpg);
+ background-repeat:no-repeat;
 }
 
 /*HEADER*/
@@ -46,7 +47,7 @@ body{
 
 /*CONTENT*/
 
-.content{
+.countries{
  font-size: 14px;
  clear: both;
  color: #e6e6e6;
@@ -61,6 +62,9 @@ body{
  margin-left: 3px;
  float: left;
 }
+.tibet{
+ float: left;
+}
 .bhutan{
  margin-top: 70px;
  float: left;
@@ -72,6 +76,7 @@ body{
 }
 .maldives{
  margin-top: 70px;
+ float: left;
 }
 .india{
  float: left;
@@ -80,7 +85,9 @@ body{
 /*FOOTER*/
 
 .footer{
- margin-top: 165px;
+ padding-top: 165px;
  text-align: center;
  font-size: 8pt;
+ clear: both;
+ margin-bottom: 34px;
 }
