--- a/lesson5/css/style.css
+++ b/lesson5/css/style.css
@@ -34,18 +34,24 @@ li{
     display: inline-block;
 }
 li:nth-child(5) a{
-    margin-right: -4px;
+    margin-right: -5px;
 }
 li:nth-child(6) a{
     color: white;
     margin-right: -4px;
-    border-left: 1px solid #56a2dc;
+    padding: 0;
+    padding-right: 12px;
 }
 li:last-child{
     background-image: url(../img/menu_button.png);
     background-repeat: no-repeat;
     color: white;
     padding: 0 13px;
+}
+.line{
+    vertical-align: middle;
+    margin-bottom: 2px;
+    margin-right: 12px;
 }
 .entrar{
     text-decoration: underline;
@@ -64,7 +70,6 @@ li:last-child a:hover{
 
 .form{
     width: 560px;
-    height: 613px;
     margin: 8% auto;
     text-align: center;
     display: block;
@@ -83,22 +88,66 @@ li:last-child a:hover{
     display: block;
 }
 .facebook{
-    padding: 36px 0;
+    padding-top: 38px;
+}
+.line2{
+    float: left;
+    padding-top: 6px;
+}
+.line2_1{
+    float: right;
+    padding-top: 6px;
 }
 .ou{
     color: #999999;
     font-size: 14px;
-    margin-bottom: 30px;
+    width: 276px;
+    margin: 30px auto;
 }
-.input{
+input[type="text"],
+input[type="email"],
+input[type="password"]{
     margin-bottom: 14px;
+    background-color: black;
+    color: white;
+    width: 253px;
+    line-height: 34px;
+    border: 0;
+    border-bottom: 1px solid #494948;
+    padding-left: 19px;
+}
+input[type="text"]:focus{
+    background-color: #1b5288;
+    box-shadow: 0 0 10px #4c88b0;
+    border: 0;
+}
+input[type="email"]:focus{
+    background-color: #1b5288;
+    box-shadow: 0 0 10px #4c88b0;
+    border: 0;
+}
+input[type="password"]:focus{
+    background-color: #1b5288;
+    box-shadow: 0 0 10px #4c88b0;
+    border: 0;
+}
+input[type="submit"]{
+    background-image: url(../img/create_button.png);
+    background-repeat: no-repeat;
+    background-color: transparent;
+    border: 0;
+    padding: 0;
+    padding-right: 10px;
+    margin: 20px 0;
+    width: 161px;
+    font-size: 14px;
+    line-height: 37px;
+    color: white;
 }
 .checkbox{
     font-size: 14px;
-    margin-top: 20px;
-}
-.submit{
-    margin: 22px 0;
+    margin-left: -35px;
+    margin-top: 4px;
 }
 .footer{
     font-size: 11px;
