--- a/lesson5/css/style.css
+++ b/lesson5/css/style.css
@@ -1,8 +1,14 @@
+@font-face {
+    font-family: 'Helvetica Neue LT Std 45 Light';
+    font-style: normal;
+    font-weight: normal;
+    src: local('../font/Helvetica Neue LT Std 45 Light'), url('../font/HelveticaNeueLTStd Lt.woff') format('woff');
+}
 body{
     background-image: url(../img/background.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    font-family: Arial, Tahoma, sans-serif;
+    font-family: 'Helvetica Neue LT Std 45 Light', Arial, sans-serif;
 }
 .wrapper{
     overflow: hidden;
@@ -34,19 +40,22 @@ li{
 }
 li:nth-child(6){
     color: white;
-    padding: 0 14px;
-    border-left: 1px solid #56a2dc;
+    padding-right: 14px;
 }
 li:last-child{
     background-image: url(../img/menu_button.png);
     background-repeat: no-repeat;
     color: white;
     padding: 0 13px;
+    height: 36px;
 }
 .line{
-    vertical-align: middle;
-    margin-bottom: 2px;
-    margin-right: 12px;
+    height: 31px;
+    border-left: 1px solid #56a2dc;
+    display: inline-block;
+    vertical-align: bottom;
+    margin-right: 14px;
+    margin-bottom: 3px;
 }
 .entrar{
     text-decoration: underline;
@@ -97,6 +106,22 @@ li:last-child a:hover{
     font-size: 14px;
     width: 276px;
     margin: 30px auto;
+    position: relative;
+}
+.line_left{
+    width: 123px;
+    border-top: 1px solid #666666;
+    border-bottom: 1px solid black;
+    position: absolute;
+    top: 6px;
+}
+.line_right{
+    width: 123px;
+    border-top: 1px solid #666666;
+    border-bottom: 1px solid black;
+    position: absolute;
+    bottom: 6px;
+    left: 153px;
 }
 input[type="text"],
 input[type="email"],
@@ -112,18 +137,15 @@ input[type="password"]{
 }
 input[type="text"]:focus{
     background-color: #1b5288;
-    box-shadow: 0 0 10px #4c88b0;
-    border: 0;
+    box-shadow: 0 0 13px #4c88b0;
 }
 input[type="email"]:focus{
     background-color: #1b5288;
-    box-shadow: 0 0 10px #4c88b0;
-    border: 0;
+    box-shadow: 0 0 13px #4c88b0;
 }
 input[type="password"]:focus{
     background-color: #1b5288;
-    box-shadow: 0 0 10px #4c88b0;
-    border: 0;
+    box-shadow: 0 0 13px #4c88b0;
 }
 input[type="submit"]{
     background-image: url(../img/create_button.png);
@@ -144,6 +166,7 @@ input[type="submit"]{
 }
 .footer{
     font-size: 11px;
+    line-height: 15px;
     padding-bottom: 22px;
     width: 320px;
     margin: 0 auto
