--- a/lesson5/css/style.css
+++ b/lesson5/css/style.css
@@ -133,14 +133,14 @@ p{
     border-radius: 5px;
     padding-right: 11px;
 }
-.log{
-    background: -moz-linear-gradient(270deg, rgba(61,87,148,1) 0%, rgba(52,65,100,1) 100%); /* ff3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(61,87,148,1)), color-stop(100%, rgba(52,65,100,1))); /* safari4+,chrome */
-    background: -webkit-linear-gradient(270deg, rgba(61,87,148,1) 0%, rgba(52,65,100,1) 100%); /* safari5.1+,chrome10+ */
-    background: -o-linear-gradient(270deg, rgba(61,87,148,1) 0%, rgba(52,65,100,1) 100%); /* opera 11.10+ */
-    background: -ms-linear-gradient(270deg, rgba(61,87,148,1) 0%, rgba(52,65,100,1) 100%); /* ie10+ */
-    background: linear-gradient(180deg, rgba(61,87,148,1) 0%, rgba(52,65,100,1) 100%); /* w3c */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3d5794', endColorstr='#344164',GradientType=0 ); /* ie6-9 */
+.f:hover{
+    background: -moz-linear-gradient(270deg, rgba(52,65,100,1) 0%, rgba(61,87,148,1) 100%); /* ff3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(52,65,100,1)), color-stop(100%, rgba(61,87,148,1))); /* safari4+,chrome */
+    background: -webkit-linear-gradient(270deg, rgba(52,65,100,1) 0%, rgba(61,87,148,1) 100%); /* safari5.1+,chrome10+ */
+    background: -o-linear-gradient(270deg, rgba(52,65,100,1) 0%, rgba(61,87,148,1) 100%); /* opera 11.10+ */
+    background: -ms-linear-gradient(270deg, rgba(52,65,100,1) 0%, rgba(61,87,148,1) 100%); /* ie10+ */
+    background: linear-gradient(180deg, rgba(52,65,100,1) 0%, rgba(61,87,148,1) 100%); /* w3c */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#344164', endColorstr='#3d5794',GradientType=0 ); /* ie6-9 */
 }
 .ou{
     color: #999999;
@@ -210,6 +210,17 @@ input[type="submit"]{
     font-size: 14px;
     margin-left: -35px;
     margin-top: 4px;
+}
+[type="submit"]:hover{
+    background: -moz-linear-gradient(270deg, rgba(46,122,196,1) 0%, rgba(81,176,220,1) 100%); /*ff3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(46,122,196,1)), color-stop(100%, rgba(81,176,220,1))); /* safari4+,chrome */
+    background: -webkit-linear-gradient(270deg, rgba(46,122,196,1) 0%, rgba(81,176,220,1) 100%); /*safari5.1+,chrome10+ */
+    background: -o-linear-gradient(270deg, rgba(46,122,196,1) 0%, rgba(81,176,220,1) 100%); /* opera11.10+ */
+    background: -ms-linear-gradient(270deg, rgba(46,122,196,1) 0%, rgba(81,176,220,1) 100%); /* ie10+*/
+    background: linear-gradient(180deg, rgba(46,122,196,1) 0%, rgba(81,176,220,1) 100%); /* w3c */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2e7ac4',
+    endColorstr='#51b0dc',GradientType=0 ); /* ie6-9 */
+    background-color: green;
 }
 .footer{
     font-size: 11px;
