--- a/lesson6/css/style.css
+++ b/lesson6/css/style.css
@@ -7,30 +7,35 @@
 }
 body{
     background-color: white;
+    font-family: Arial, Tahoma, sans-serif;
 }
 a{
     text-decoration: none;
 }
 
 
+
 /* HEADER */
+
 
 
 .wrapper{
     width: 909px;
-    padding: 17px 46px 0 46px;
+    padding: 18px 46px 0 46px;
     margin: 0 auto;
     font-family: Arial, sans-serif;
 }
 .phone_box{
     padding-left: 7px;
+    height: 25px;
+    margin-bottom: 11px;
 }
 .float{
     display: inline-block;
 }
 .phone_img{
-    width: 22px;
-    height: 22px;
+    width: 21px;
+    height: 21px;
     background: -moz-linear-gradient(90deg, rgba(35,105,136,1) 0%, rgba(12,51,87,1) 100%); /* ff3.6+ */
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(12,51,87,1)), color-stop(100%, rgba(35,105,136,1))); /* safari4+,chrome */
     background: -webkit-linear-gradient(90deg, rgba(35,105,136,1) 0%, rgba(12,51,87,1) 100%); /* safari5.1+,chrome10+ */
@@ -40,10 +45,12 @@ a{
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0c3357', endColorstr='#236988',GradientType=0 ); /* ie6-9 */
     border-radius: 100%;
     text-align: center;
+    vertical-align: -8px;
 }
 .phone{
     color: #5e696d;
     font-size: 18px;
+    vertical-align: -5px;
 }
 .avt{
     background: -moz-linear-gradient(270deg, rgba(31,103,135,1) 0%, rgba(12,51,87,1) 100%); /* ff3.6+ */
@@ -53,22 +60,24 @@ a{
     background: -ms-linear-gradient(270deg, rgba(31,103,135,1) 0%, rgba(12,51,87,1) 100%); /* ie10+ */
     background: linear-gradient(180deg, rgba(31,103,135,1) 0%, rgba(12,51,87,1) 100%); /* w3c */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1f6787', endColorstr='#0c3357',GradientType=0 ); /* ie6-9 */
-    border-radius: 5px;
+    border-radius: 4px;
     padding-top: 3px;
     padding-bottom: 4px;
     padding-left: 8px;
     padding-right: 10px;
-    margin: 0 12px 10px 12px;
+    margin: 0 14px 10px 12px;
     box-shadow: 3px 3px 3px #969696;
 }
 .man{
     vertical-align: middle;
 }
 input[type="text"]{
-    width: 112px;
+    width: 110px;
+    height: 12px;
 }
 input[type="password"]{
-    width: 112px;
+    width: 110px;
+    height: 12px;
 }
 input[type="submit"]{
     background-color: transparent;
@@ -91,7 +100,7 @@ input[type="submit"]{
 .navigation{
     border: 1px solid #c1c8cb;
     border-radius: 20px;
-    padding: 0 10px 4px 10px;
+    padding: 0 10px 4px 8px;
 }
 .map{
     padding: 0 5px;
@@ -110,6 +119,7 @@ input[type="submit"]{
     line-height: 29px;
     box-shadow: 3px 3px 3px;
     text-align: right;
+    margin-top: 3px;
 }
 .menu li{
     display: inline-block;
@@ -119,9 +129,9 @@ input[type="submit"]{
 .menu li a{
     color: #b1bcc0;
     display: block;
-    padding-left: 12px;
-    padding-right: 12px;
-    font-size: 14px;
+    padding-left: 15px;
+    padding-right: 15px;
+    font-size: 13px;
 }
 .basket{
     font-size: 11px;
@@ -144,7 +154,7 @@ input[type="submit"]{
 }
 .goods{
     color: #929b9f;
-    margin-left: 5px;
+    margin-left: 11px;
 }
 .amount{
     margin-left: 15px;
@@ -158,10 +168,13 @@ input[type="submit"]{
     color: #0d5a8f;
     margin-right: 14px;
     padding-left: 3px;
+    font-size: 12px;
 }
 
 
+
 /* SIDEBAR */
+
 
 
 .sidebar_left{
@@ -198,10 +211,10 @@ input[type="submit"]{
     text-transform: uppercase;
     padding-left: 2px;
 }
-.list{
+.list_left{
     position: absolute;
     top: 3px;
-    left: 5px;
+    left: 4px;
 }
 .list_titel_bar{
     border: 1px solid #79878d;
@@ -223,7 +236,7 @@ input[type="submit"]{
 .list_titel{
     position: absolute;
     left: 28px;
-    top: 7px;
+    top: 6px;
 }
 .sidebar_left ul{
     list-style-type: circle;
@@ -242,14 +255,20 @@ input[type="submit"]{
 }
 
 
+
 /* SIDEBAR right */
+
 
 
 .sidebar_right{
     float: right;
     margin-top: 19px;
 }
-
+.list{
+    position: absolute;
+    top: 3px;
+    left: 5px;
+}
 .border{
     width: 11px;
     height: 11px;
@@ -260,7 +279,7 @@ input[type="submit"]{
     font-size: 13px;
     color: #465961;
     padding-left: 11px;
-    margin-top: 12px;
+    margin-top: 6px;
 }
 .bottom{
     margin-bottom: 12px;
@@ -353,7 +372,9 @@ main{
 }
 
 
+
 /* FOOTER */
+
 
 
 footer {
