--- a/lesson6/css/style.css
+++ b/lesson6/css/style.css
@@ -30,7 +30,7 @@ a{
     height: 25px;
     margin-bottom: 11px;
 }
-.float{
+.inline{
     display: inline-block;
 }
 .phone_img{
@@ -215,7 +215,7 @@ input[type="submit"]{
 .list_left{
     position: absolute;
     top: 3px;
-    left: 4px;
+    left: 5px;
 }
 .list_titel_bar{
     border: 1px solid #79878d;
@@ -227,25 +227,26 @@ input[type="submit"]{
     padding: 2px 0 1px 4px;
     position: relative;
     width: 144px;
-}
-.border{
-    width: 11px;
-    height: 11px;
-    border: 5px solid #114165;
-    border-radius: 100%;
+    height: 21px;
 }
 .list_titel{
     position: absolute;
     left: 28px;
     top: 6px;
 }
+.list_titel:before{
+    content: "";
+    width: 11px;
+    height: 11px;
+    border: 5px solid #114165;
+    border-radius: 100%;
+    position: absolute;
+    top: -4px;
+    left: -24px;
+}
 .sidebar_left ul{
-    list-style-type: circle;
     padding-left: 44px;
     line-height: 24px;
-}
-.sidebar_left li{
-    padding-left: 0;
 }
 .sidebar_left a{
     color: #465961;
@@ -257,14 +258,30 @@ input[type="submit"]{
     font-style: italic;
     color: #0c3256;
 }
-/*.marker{
-    height: 4px;
-    width: 4px;
-    border-radius: 100%;
-    border: 1px solid #000;
-    vertical-align: middle;
-    margin-right: 4px;
-}*/
+.sidebar_left a:hover:before{
+    content: "";
+    width: 3px;
+    height: 3px;
+    position: absolute;
+    left: -8px;
+    top: 11px;
+    border-radius: 50%;
+    border: 1px solid #313a55;
+}
+.sidebar_left li{
+    position: relative;
+}
+.sidebar_left li:before{
+    content: "";
+    width: 3px;
+    height: 3px;
+    position: absolute;
+    left: -8px;
+    top: 11px;
+    border-radius: 50%;
+    border: 1px solid #465961;
+}
+
 
 
 /* SIDEBAR right */
