--- a/lesson6/css/style.css
+++ b/lesson6/css/style.css
@@ -120,6 +120,7 @@ input[type="submit"]{
     box-shadow: 3px 3px 3px;
     text-align: right;
     margin-top: 3px;
+    margin-bottom: 12px;
 }
 .menu li{
     display: inline-block;
@@ -170,6 +171,157 @@ input[type="submit"]{
     margin-right: 12px;
     padding-left: 3px;
     font-size: 12px;
+}
+
+
+/*search boxes*/
+
+
+.search_boxes{
+    border: 1px solid #b6b6b7;
+    border-radius: 20px;
+    box-shadow: #565656 3px 3px 10px;
+    position: relative;
+    font-size: 12px;
+    color: #154467;
+}
+.search_by_car{
+    width: 381px;
+    padding: 2px 13px 8px 18px;
+    margin-left: 4px;
+    margin-right: 11px;
+}
+.search_by_car_titel{
+    position: absolute;
+    left: 105px;
+    font-weight: 900;
+}
+.drop_list_group{
+    font-size: 10px;
+    font-weight: 900;
+    color: #154468;
+}
+.drop_list_group2{
+    font-size: 10px;
+    font-weight: 900;
+    color: #154468;
+    margin-left: 110px;
+}
+.drop_list{
+    font-size: 9px;
+    color: black;
+}
+.line2{
+    color: #77858b;
+}
+.select_disks{
+    position: absolute;
+    top: 2px;
+    left: 215px;
+}
+.mark{
+    margin-right: 11px;
+}
+.model, .year{
+    margin-right: 9px;
+}
+.year {
+    width: 50px;
+}
+select{
+    width: 90px;
+}
+.complectation{
+    margin-top: 9px;
+}
+.search{
+    font-style: italic;
+    font-size: 14px;
+    color: #154467;
+    border-bottom: 2px solid #99a6b3;
+    margin-left: 304px;
+}
+.tires_search{
+    width: 167px;
+    padding: 6px 14px 10px 10px;
+    margin-right: 5px;
+}
+.disks_search{
+    width: 238px;
+    padding: 6px 17px 10px 10px;
+}
+.tires_search_titel{
+    text-transform: uppercase;
+    margin-bottom: 11px;
+    font-weight: 900;
+    font-size: 10px;
+}
+.disks_search_titel{
+    text-transform: uppercase;
+    font-weight: 900;
+    margin-bottom: 7px;
+    font-size: 10px;
+}
+.slash{
+   font-size: 14px;
+}
+.size{
+    width: 55px;
+}
+.radius {
+    font-size: 11px;
+    margin-top: 9px;
+    margin-left: 26px;
+}
+.radius_drop_list{
+    width: 46px;
+}
+.season{
+    margin-top: 5px;
+    vertical-align: top;
+}
+.search_button[type="submit"]{
+    font-style: italic;
+    font-size: 14px;
+    color: #154467;
+    background: none;
+    margin-top: 4px;
+    border-bottom: 2px solid #99a6b3;
+    padding: 0;
+}
+.search_by_car_button[type="submit"]{
+    margin-left: 295px;
+}
+.tires_search_buuton[type="submit"]{
+    margin-left: 110px;
+}
+.disks_search_button[type="submit"]{
+    margin-left: 190px;
+}
+.disks_search_left_side{
+    border-right: 1px solid #bdc6ca;
+    padding-right: 12px;
+}
+.disks_search_right_side{
+    margin-left: 10px;
+    vertical-align: 6px;
+}
+.disk_diameter{
+    margin-bottom: 6px;
+}
+.select_box_size{
+    width: 57px;
+}
+.fasten{
+    width: 50px;
+    margin-left: 17px;
+}
+.diameter{
+    margin-left: 5px;
+    vertical-align: 9px;
+}
+.dco{
+    margin-bottom: 4px;
 }
 
 
@@ -260,21 +412,21 @@ input[type="submit"]{
 }
 .sidebar_left a:hover:before{
     content: "";
-    width: 3px;
-    height: 3px;
+    min-width: 3px;
+    min-height: 3px;
     position: absolute;
-    left: -8px;
-    top: 11px;
+    left: -9px;
+    top: 10px;
     border-radius: 50%;
-    border: 1px solid #313a55;
+    border: 2px solid #313a55;
 }
 .sidebar_left li{
     position: relative;
 }
 .sidebar_left li:before{
     content: "";
-    width: 3px;
-    height: 3px;
+    min-width: 3px;
+    min-height: 3px;
     position: absolute;
     left: -8px;
     top: 11px;
@@ -315,7 +467,7 @@ input[type="submit"]{
 .form{
     padding-left: 15px;
 }
-.form input[type="submit"]{
+.brend_submition[type="submit"]{
     background: -moz-linear-gradient(270deg, rgba(31,103,135,1) 0%, rgba(12,51,87,1) 100%); /* ff3.6+ */
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(31,103,135,1)), color-stop(100%, rgba(12,51,87,1))); /* safari4+,chrome */
     background: -webkit-linear-gradient(270deg, rgba(31,103,135,1) 0%, rgba(12,51,87,1) 100%); /* safari5.1+,chrome10+ */
@@ -333,7 +485,7 @@ input[type="submit"]{
     margin-left: 10px;
     box-shadow: #565656 3px 3px 10px;
 }
-.form input[type="submit"]:hover{
+.brend_submition[type="submit"]:hover{
     background: -moz-linear-gradient(270deg, rgba(12,51,87,1) 0%, rgba(31,103,135,1) 100%); /* ff3.6+ */
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(12,51,87,1)), color-stop(100%, rgba(31,103,135,1))); /* safari4+,chrome */
     background: -webkit-linear-gradient(270deg, rgba(12,51,87,1) 0%, rgba(31,103,135,1) 100%); /* safari5.1+,chrome10+ */
@@ -342,6 +494,10 @@ input[type="submit"]{
     background: linear-gradient(180deg, rgba(12,51,87,1) 0%, rgba(31,103,135,1) 100%); /* w3c */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0c3357', endColorstr='#1f6787',GradientType=0 ); /* ie6-9 */
 }
+input[type="checkbox"]{
+
+}
+
 
 
 
